infra/aws-infra.yml
Description: Create HMS Infra

Parameters:
  MyIP:
    Type: String
    Description: The IP address range that is allowed to access the instance

Resources:
  # ------------------------------------------------------------#
  #  VPC
  # ------------------------------------------------------------#
  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default

  # ------------------------------------------------------------#
  #  InternetGateway
  # ------------------------------------------------------------#
  InternetGateway:
    Type: AWS::EC2::InternetGateway

  # ------------------------------------------------------------#
  #  VPCGatewayAttachment
  # ------------------------------------------------------------#
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref Vpc

  # ------------------------------------------------------------#
  #  Subnet
  # ------------------------------------------------------------#
  PublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1a
      CidrBlock: 10.0.1.0/24
      VpcId: !Ref Vpc

  # ------------------------------------------------------------#
  #  RouteTable
  # ------------------------------------------------------------#
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc

  # ------------------------------------------------------------#
  # Route
  # ------------------------------------------------------------#
  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  # ------------------------------------------------------------#
  # SubnetRouteTableAssociation
  # ------------------------------------------------------------#
  PublicSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetA
      RouteTableId: !Ref PublicRouteTable

  # ------------------------------------------------------------#
  # IAM::Role
  # ------------------------------------------------------------#
  TaskExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: HmsTaskExecutionRole
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ecs-tasks.amazonaws.com
            Action:
              - sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
        - arn:aws:iam::aws:policy/AmazonSSMReadOnlyAccess
      # Policies:
      #   - PolicyName: HmsTaskExecutionPolicy
      #     PolicyDocument:
      #       Version: 2012-10-17
      #       Statement:
      #         - Effect: Allow
      #           Action:
      #             - ssmessages:CreateControlChannel
      #             - ssmessages:CreateDataChannel
      #             - ssmessages:OpenControlChannel
      #             - ssmessages:OpenDataChannel
      #           Resource: "*"

  TaskRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: HmsTaskRole
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ecs-tasks.amazonaws.com
            Action:
              - sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSSMReadOnlyAccess

  # ------------------------------------------------------------#
  # SecurityGroup
  # ------------------------------------------------------------#
  WebApSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: HmsWebApSecurityGroup
      GroupName: HmsWebApSecurityGroup
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref MyIP
      VpcId: !Ref Vpc

  DbSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: HmsDbSecurityGroup
      GroupName: HmsDbSecurityGroup
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref WebApSecurityGroup
      VpcId: !Ref Vpc

  # ------------------------------------------------------------#
  # LogGroup
  # ------------------------------------------------------------#
  LogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: /ecs/hms

  # ------------------------------------------------------------#
  # HttpNamespace
  # ------------------------------------------------------------#
  HttpNamespace:
    Type: AWS::ServiceDiscovery::HttpNamespace
    Properties:
      Name: hms

  # ------------------------------------------------------------#
  # ECS
  # ------------------------------------------------------------#
  Cluster:
    Type: AWS::ECS::Cluster
    Properties:
      CapacityProviders:
        - FARGATE
      ClusterName: HmsCluster
      DefaultCapacityProviderStrategy:
        - CapacityProvider: FARGATE
          Weight: 1
      ServiceConnectDefaults:
        Namespace: !Ref HttpNamespace

  DbTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Image: public.ecr.aws/docker/library/mysql:8.4.3
          Name: HmsDbTask
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref LogGroup
              awslogs-region: !Ref AWS::Region
              awslogs-stream-prefix: db
          PortMappings:
            - ContainerPort: 3306
              Name: db
          Environment:
            - Name: MYSQL_DATABASE
              Value: hms
            - Name: MYSQL_USER
              Value: hms
          Secrets:
            - Name: MYSQL_ROOT_PASSWORD
              ValueFrom: MYSQL_ROOT_PASSWORD
            - Name: MYSQL_PASSWORD
              ValueFrom: MYSQL_PASSWORD
          Healthcheck:
            Command:
              - CMD-SHELL
              - mysqladmin ping -h 127.0.0.1 -u root -p$$MYSQL_ROOT_PASSWORD || exit 1
            Timeout: 5
            Interval: 10
            Retries: 10
      Cpu: 512
      Family: HmsDbTaskDefinition
      Memory: 1024
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      ExecutionRoleArn: !Ref TaskExecutionRole
      TaskRoleArn: !Ref TaskRole

  DbService:
    Type: AWS::ECS::Service
    Properties:
      Cluster: !Ref Cluster
      DesiredCount: 1
      # EnableExecuteCommand: true
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          SecurityGroups:
            - !Ref DbSecurityGroup
          Subnets:
            - !Ref PublicSubnetA
      ServiceName: HmsDbService
      TaskDefinition: !Ref DbTaskDefinition
      ServiceConnectConfiguration:
        Enabled: true
        Namespace: hms
        Services:
          - DiscoveryName: db
            ClientAliases:
              - DnsName: db.hms
                Port: 3306
            PortName: db

  WebApTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Image: public.ecr.aws/f9s4g9c5/tarosuke777/spring-boot-hms:latest
          Name: HmsWebApTask
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref LogGroup
              awslogs-region: !Ref AWS::Region
              awslogs-stream-prefix: web-ap
          PortMappings:
            - ContainerPort: 80
          Environment:
            - Name: SPRING_PROFILES_ACTIVE
              Value: aws
      Cpu: 512
      Family: HmsWebApTaskDefinition
      Memory: 1024
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      ExecutionRoleArn: !Ref TaskExecutionRole
      TaskRoleArn: !Ref TaskRole

  WebApService:
    Type: AWS::ECS::Service
    Properties:
      Cluster: !Ref Cluster
      DesiredCount: 1
      # EnableExecuteCommand: true
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          SecurityGroups:
            - !Ref WebApSecurityGroup
          Subnets:
            - !Ref PublicSubnetA
      ServiceName: HmsWebApService
      TaskDefinition: !Ref WebApTaskDefinition
      ServiceConnectConfiguration:
        Enabled: true
        Namespace: hms
    DependsOn:
      - DbService
